crates/pgls_pretty_print/tests/snapshots/multi/tests__index_including_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/index_including.sql
snapshot_kind: text
---
CREATE TABLE tbl_include_reg (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box
);

INSERT INTO tbl_include_reg
SELECT
  x,
  2 * x,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

CREATE INDEX "tbl_include_reg_idx"
ON tbl_include_reg
USING btree
(
  c1,
  c2
)
INCLUDE (c3,
c4);

CREATE INDEX ON tbl_include_reg USING btree (c1, c2) INCLUDE (c1, c3);

SELECT
  pg_get_indexdef(i.indexrelid)
FROM
  pg_index AS i
  INNER JOIN
    pg_class AS c
  ON i.indexrelid = c.oid
WHERE
  i.indrelid =
  CAST('tbl_include_reg' AS REGCLASS)
ORDER BY c.relname;

CREATE TABLE tbl_include_unique1 (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box
);

INSERT INTO tbl_include_unique1
SELECT
  x,
  2 * x,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

CREATE UNIQUE
INDEX "tbl_include_unique1_idx_unique"
ON tbl_include_unique1
USING btree
(
  c1,
  c2
)
INCLUDE (c3,
c4);

ALTER TABLE tbl_include_unique1
  ADD UNIQUE USING INDEX "tbl_include_unique1_idx_unique";

ALTER TABLE tbl_include_unique1
  ADD UNIQUE (c1, c2) INCLUDE ("c3", "c4");

SELECT
  pg_get_indexdef(i.indexrelid)
FROM
  pg_index AS i
  INNER JOIN
    pg_class AS c
  ON i.indexrelid = c.oid
WHERE
  i.indrelid =
  CAST('tbl_include_unique1' AS REGCLASS)
ORDER BY c.relname;

CREATE TABLE tbl_include_unique2 (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box
);

INSERT INTO tbl_include_unique2
SELECT
  1,
  2,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

CREATE UNIQUE
INDEX "tbl_include_unique2_idx_unique"
ON tbl_include_unique2
USING btree
(
  c1,
  c2
)
INCLUDE (c3,
c4);

ALTER TABLE tbl_include_unique2
  ADD UNIQUE (c1, c2) INCLUDE ("c3", "c4");

CREATE TABLE tbl_include_pk (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box
);

INSERT INTO tbl_include_pk
SELECT
  1,
  2 * x,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

ALTER TABLE tbl_include_pk
  ADD PRIMARY KEY (c1,
  c2)
  INCLUDE ("c3",
  "c4");

SELECT
  pg_get_indexdef(i.indexrelid)
FROM
  pg_index AS i
  INNER JOIN
    pg_class AS c
  ON i.indexrelid = c.oid
WHERE
  i.indrelid =
  CAST('tbl_include_pk' AS REGCLASS)
ORDER BY c.relname;

CREATE TABLE tbl_include_box (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box
);

INSERT INTO tbl_include_box
SELECT
  1,
  2 * x,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

CREATE UNIQUE
INDEX "tbl_include_box_idx_unique"
ON tbl_include_box
USING btree
(
  c1,
  c2
)
INCLUDE (c3,
c4);

ALTER TABLE tbl_include_box
  ADD PRIMARY KEY USING INDEX "tbl_include_box_idx_unique";

SELECT
  pg_get_indexdef(i.indexrelid)
FROM
  pg_index AS i
  INNER JOIN
    pg_class AS c
  ON i.indexrelid = c.oid
WHERE
  i.indrelid =
  CAST('tbl_include_box' AS REGCLASS)
ORDER BY c.relname;

CREATE TABLE tbl_include_box_pk (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box
);

INSERT INTO tbl_include_box_pk
SELECT
  1,
  2,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

ALTER TABLE tbl_include_box_pk
  ADD PRIMARY KEY (c1,
  c2)
  INCLUDE ("c3",
  "c4");

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  CONSTRAINT "covering" UNIQUE (c1,
  c2)
  INCLUDE ("c3",
  "c4")
);

SELECT
  CAST(indexrelid AS REGCLASS),
  indnatts,
  indnkeyatts,
  indisunique,
  indisprimary,
  indkey,
  indclass
FROM
  pg_index
WHERE
  indrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID);

SELECT
  pg_get_constraintdef(oid),
  conname,
  conkey
FROM
  pg_constraint
WHERE
  conrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID);

INSERT INTO tbl
SELECT
  1,
  2,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  CONSTRAINT "covering" PRIMARY KEY (c1,
  c2)
  INCLUDE ("c3",
  "c4")
);

SELECT
  CAST(indexrelid AS REGCLASS),
  indnatts,
  indnkeyatts,
  indisunique,
  indisprimary,
  indkey,
  indclass
FROM
  pg_index
WHERE
  indrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID);

SELECT
  pg_get_constraintdef(oid),
  conname,
  conkey
FROM
  pg_constraint
WHERE
  conrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID) AND
  contype = 'p';

INSERT INTO tbl
SELECT
  1,
  2,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

INSERT INTO tbl
SELECT
  1,
  NULL,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

INSERT INTO tbl SELECT x, 2 * x, NULL, NULL FROM generate_series(1, 300) AS x;

SELECT * FROM tbl WHERE (c1, c2, c3) < (2, 5, 1);

SELECT * FROM tbl WHERE (c1, c2, c3) < (2, 5, 1);

SET enable_seqscan = off;

SELECT * FROM tbl WHERE (c1, c2, c3) < (262, 1, 1) LIMIT 1;

SELECT * FROM tbl WHERE (c1, c2, c3) < (262, 1, 1) LIMIT 1;

DROP TABLE "tbl";

RESET enable_seqscan;

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  UNIQUE (c1, c2) INCLUDE ("c3", "c4")
);

SELECT
  CAST(indexrelid AS REGCLASS),
  indnatts,
  indnkeyatts,
  indisunique,
  indisprimary,
  indkey,
  indclass
FROM
  pg_index
WHERE
  indrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID);

SELECT
  pg_get_constraintdef(oid),
  conname,
  conkey
FROM
  pg_constraint
WHERE
  conrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID);

INSERT INTO tbl
SELECT
  1,
  2,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  PRIMARY KEY (c1,
  c2)
  INCLUDE ("c3",
  "c4")
);

SELECT
  CAST(indexrelid AS REGCLASS),
  indnatts,
  indnkeyatts,
  indisunique,
  indisprimary,
  indkey,
  indclass
FROM
  pg_index
WHERE
  indrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID);

SELECT
  pg_get_constraintdef(oid),
  conname,
  conkey
FROM
  pg_constraint
WHERE
  conrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID) AND
  contype = 'p';

INSERT INTO tbl
SELECT
  1,
  2,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

INSERT INTO tbl
SELECT
  1,
  NULL,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

INSERT INTO tbl SELECT x, 2 * x, NULL, NULL FROM generate_series(1, 10) AS x;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  EXCLUDE USING btree (c1 WITH =)
  INCLUDE ("c3",
  "c4")
);

SELECT
  CAST(indexrelid AS REGCLASS),
  indnatts,
  indnkeyatts,
  indisunique,
  indisprimary,
  indkey,
  indclass
FROM
  pg_index
WHERE
  indrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID);

SELECT
  pg_get_constraintdef(oid),
  conname,
  conkey
FROM
  pg_constraint
WHERE
  conrelid =
  CAST(CAST('tbl' AS REGCLASS) AS OID);

INSERT INTO tbl
SELECT
  1,
  2,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

INSERT INTO tbl SELECT x, 2 * x, NULL, NULL FROM generate_series(1, 10) AS x;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 INT
);

CREATE UNIQUE INDEX "tbl_idx" ON tbl USING btree (c1, c2, c3, c4);

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

ALTER TABLE tbl
  DROP COLUMN c3;

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box
);

CREATE UNIQUE INDEX "tbl_idx" ON tbl USING btree (c1, c2) INCLUDE (c3, c4);

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

ALTER TABLE tbl
  DROP COLUMN c3;

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  UNIQUE (c1, c2) INCLUDE ("c3", "c4")
);

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

ALTER TABLE tbl
  DROP COLUMN c3;

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

ALTER TABLE tbl
  DROP COLUMN c1;

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT
);

CREATE INDEX "tbl_idx" ON tbl USING btree (c1, (c1 + 0)) INCLUDE (c2);

ALTER INDEX tbl_idx
  ALTER COLUMN 1 SET STATISTICS 1000;

ALTER INDEX tbl_idx
  ALTER COLUMN 2 SET STATISTICS 1000;

ALTER INDEX tbl_idx
  ALTER COLUMN 3 SET STATISTICS 1000;

ALTER INDEX tbl_idx
  ALTER COLUMN 4 SET STATISTICS 1000;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  UNIQUE (c1, c2) INCLUDE ("c3", "c4")
);

INSERT INTO tbl
SELECT
  x,
  2 * x,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 1000) AS x;

CREATE UNIQUE INDEX CONCURRENTLY ON tbl USING btree (c1, c2) INCLUDE (c3, c4);

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  UNIQUE (c1, c2) INCLUDE ("c3", "c4")
);

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

ALTER TABLE tbl
  DROP COLUMN c3;

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

REINDEX INDEX tbl_c1_c2_c3_c4_key;

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

ALTER TABLE tbl
  DROP COLUMN c1;

SELECT indexdef FROM pg_indexes WHERE tablename = 'tbl' ORDER BY indexname;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 box,
  c4 box
);

CREATE INDEX ON tbl USING brin (c1, c2) INCLUDE (c3, c4);

CREATE INDEX ON tbl USING gist (c3) INCLUDE (c1, c4);

CREATE INDEX ON tbl USING spgist (c3) INCLUDE (c4);

CREATE INDEX ON tbl USING gin (c1, c2) INCLUDE (c3, c4);

CREATE INDEX ON tbl USING hash (c1, c2) INCLUDE (c3, c4);

CREATE INDEX ON tbl USING rtree (c3) INCLUDE (c1, c4);

CREATE INDEX ON tbl USING btree (c1, c2) INCLUDE (c3, c4);

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box
);

INSERT INTO tbl
SELECT
  x,
  2 * x,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

CREATE UNIQUE INDEX "tbl_idx_unique"
ON tbl
USING btree
(
  c1,
  c2
)
INCLUDE (c3,
c4);

UPDATE tbl SET c1 = 100 WHERE c1 = 2;

UPDATE tbl SET c1 = 1 WHERE c1 = 3;

UPDATE tbl SET c2 = 2 WHERE c1 = 1;

UPDATE tbl SET c3 = 1;

DELETE FROM tbl WHERE c1 = 5 OR c3 = 12;

DROP TABLE "tbl";

CREATE TABLE tbl (
  c1 INT,
  c2 INT,
  c3 INT,
  c4 box,
  UNIQUE (c1, c2) INCLUDE ("c3", "c4")
);

INSERT INTO tbl
SELECT
  x,
  2 * x,
  3 * x,
  box('4,4,4,4')
FROM
  generate_series(1, 10) AS x;

ALTER TABLE tbl
  ALTER COLUMN c1 TYPE BIGINT;

ALTER TABLE tbl
  ALTER COLUMN c3 TYPE BIGINT;

DROP TABLE "tbl";

CREATE TABLE nametbl (
  c1 INT,
  c2 NAME,
  c3 DOUBLE PRECISION
);

CREATE INDEX "nametbl_c1_c2_idx" ON nametbl USING btree (c2, c1) INCLUDE (c3);

INSERT INTO nametbl VALUES (1, 'two', 3.0);

VACUUM nametbl;

SET enable_seqscan = 0;

SELECT c2, c1, c3 FROM nametbl WHERE c2 = 'two' AND c1 = 1;

SELECT c2, c1, c3 FROM nametbl WHERE c2 = 'two' AND c1 = 1;

RESET enable_seqscan;

DROP TABLE "nametbl";
